# chromium-base

./: .gitmodules  README.md  gn-linux.ensure  gn-win.ensure
patchs/: abseil_cpp_without_libcxx.patch  base.patch  vs2022.patch
src/: .gn
src/base/: BUILD.gn
src/base/hash/: md5_nacl.cc
src/build_overrides/: build.gni
src/tools/win/DebugVisualizers/: BUILD.gn
